Added Web and Mobile implementations